# CompTask_V

./: CMakeLists.txt  Integrator.cpp  Integrator.h  InterpolateQF.cpp  InterpolateQF.h  Matrix.cpp  Matrix.h  QFHADP.cpp  QFHADP.h  RPN.cpp  RPN.h  RootFinder.cpp  RootFinder.h  Task5.1.cpp  Task5.1.h  Task5.2.cpp  Task5.2.h  Task5.3.cpp  Task5.3.h  invert_matrix.cpp  main.cpp  test.cpp  test.h
